added basic filters

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -5,69 +5,115 @@ export interface Props {
   ogImage?: string;
 }
 
-const { 
-  title = "Alejandro Delgado Portfolio", 
+const {
+  title = "Alejandro Delgado Portfolio",
   description = "Alejandro Delgado UI/UX Web Designer Portfolio",
-  ogImage = "https://www.aledesign.dev/images/aledesign-avatar.png"
+  ogImage = "https://www.aledesign.dev/images/aledesign-avatar.png",
 } = Astro.props;
 ---
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content={description} />
-  <meta name="keywords" content="FIGMA, Adobe XD, Mockeup, Wireframing, Web Design, Development,Diseño Web, Maquetado y Desarrollo Web, UI, UX" />
-  <title>{title}</title>
-  <meta name="generator" content={Astro.generator} />
-  
-  <!-- Open Graph -->
-  <meta property="og:title" content="Alejandro Delgado - UI/UX Web Designer" />
-  <meta property="og:type" content="website" />
-  <meta property="og:description" content="Alejandro Delgado - UI/UX Web Designer" />
-  <meta property="og:image" content={ogImage} />
-  
-  <!-- Twitter -->
-  <meta name="twitter:card" content="Alejandro Delgado - UI/UX Web Designer" />
-  <meta name="twitter:title" content="Alejandro Delgado - UI/UX Web Designer" />
-  <meta name="twitter:description" content="Alejandro Delgado - UI/UX Web Designer" />
-  <meta name="twitter:image" content={ogImage} />
-  <meta name="twitter:site" content="Alejandro Delgado - UI/UX Web Designer" />
-  <meta name="twitter:creator" content="Alejandro Delgado - UI/UX Web Designer" />
-  
-  <!-- SASS Styles -->
-  <link rel="stylesheet" href="/src/styles/main.scss" />
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content={description} />
+    <meta
+      name="keywords"
+      content="FIGMA, Adobe XD, Mockeup, Wireframing, Web Design, Development,Diseño Web, Maquetado y Desarrollo Web, UI, UX"
+    />
+    <title>{title}</title>
+    <meta name="generator" content={Astro.generator} />
 
-  <!-- FontAwesome -->
-  <script src="https://kit.fontawesome.com/e0025567be.js" crossorigin="anonymous"></script>
+    <!-- Open Graph -->
+    <meta
+      property="og:title"
+      content="Alejandro Delgado - UI/UX Web Designer"
+    />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:description"
+      content="Alejandro Delgado - UI/UX Web Designer"
+    />
+    <meta property="og:image" content={ogImage} />
 
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-JGHRGD2X1R"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-JGHRGD2X1R');
-  </script>
+    <!-- Twitter -->
+    <meta
+      name="twitter:card"
+      content="Alejandro Delgado - UI/UX Web Designer"
+    />
+    <meta
+      name="twitter:title"
+      content="Alejandro Delgado - UI/UX Web Designer"
+    />
+    <meta
+      name="twitter:description"
+      content="Alejandro Delgado - UI/UX Web Designer"
+    />
+    <meta name="twitter:image" content={ogImage} />
+    <meta
+      name="twitter:site"
+      content="Alejandro Delgado - UI/UX Web Designer"
+    />
+    <meta
+      name="twitter:creator"
+      content="Alejandro Delgado - UI/UX Web Designer"
+    />
 
-  <!-- Google Tag Manager -->
-  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-KNVXGZVD');</script>
+    <!-- SASS Styles -->
+    <link rel="stylesheet" href="/src/styles/main.scss" />
 
-  <!-- Cookiebot -->
-  <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="074a6ccd-5d9d-41e4-bf3b-1dd463bf4e0c" type="text/javascript" async></script>
-</head>
+    <!-- FontAwesome -->
+    <script
+      src="https://kit.fontawesome.com/e0025567be.js"
+      crossorigin="anonymous"></script>
 
-<body>
-  <!-- Google Tag Manager (noscript) -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KNVXGZVD"
-    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-JGHRGD2X1R"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+      gtag("config", "G-JGHRGD2X1R");
+    </script>
 
-  <slot />
-</body>
+    <!-- Google Tag Manager -->
+    <script>
+      (function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != "dataLayer" ? "&l=" + l : "";
+        j.async = true;
+        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, "script", "dataLayer", "GTM-KNVXGZVD");
+    </script>
+
+    <!-- Cookiebot -->
+    <script
+      id="Cookiebot"
+      src="https://consent.cookiebot.com/uc.js"
+      data-cbid="074a6ccd-5d9d-41e4-bf3b-1dd463bf4e0c"
+      type="text/javascript"
+      async></script>
+  </head>
+
+  <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript
+      ><iframe
+        src="https://www.googletagmanager.com/ns.html?id=GTM-KNVXGZVD"
+        height="0"
+        width="0"
+        style="display:none;visibility:hidden"></iframe></noscript
+    >
+
+    <slot />
+  </body>
 </html>
